--- a/index.html
+++ b/index.html
@@ -9,4 +9,16 @@
     <h1>MyNotes</h1>
     <div id="todoListView"></div>
 </body>
+<form>
+    <label>Title</label>
+    <input type="text" id="inputTitle"/>
+    <label>Description</label>
+    <input type="text" id="inputDescription"/>
+    <label>Place</label>
+    <input type="text" id="inputPlace"/>
+    <label>Due date</label>
+    <input type="date" id="inputDate"/>
+    <input type="button" value="add"
+           onclick="addTodo()"/>
+</form>
 </html>
