--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>MyNotes</h1>
+    <div>
+        <label>Search</label>
+        <input type="text" id="inputSearch" placeholder="Type Your seach here..."/>
+    </div>
     <div id="todoListView"></div>
 </body>
 <form>
