--- a/index.html
+++ b/index.html
@@ -1,24 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="theme.css">
-    <script src="scripts.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="script.js"></script>
     <title>MyTODO App</title>
 </head>
 <body>
-    <h1>MyNotes</h1>
-    <div id="todoListView"></div>
+    <main>
+        <div class="container bg-secondary">
+            <h1 class="d-flex justify-content-center text-white">My ToDo List</h1>
+            <div id="todoListView">
+            </div>
+
+            <form>
+                <div class="form-row py-2">
+                    <div class="col">
+                        <input class="form-control" type="text" id="inputSearch" placeholder="Type Your search here..."/>
+                    </div>
+                    <div class="col d-flex justify-content-end">
+                        <label class="align-self-center text-white">From</label>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="date" id="beginDate"/>
+                    </div>
+                    <div class="col d-flex justify-content-end">
+                        <label class="align-self-center text-white">To</label>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="date" id="endDate"/>
+                    </div>
+                </div>
+            </form>
+            <form>
+                <div class="form-row py-2">
+                    <div class="col">
+                        <input class="form-control" type="text" id="inputTitle" placeholder="Title"/>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="text" id="inputDescription" placeholder="Description"/>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="text" id="inputPlace" placeholder="Place"/>
+                    </div>
+                    <div class="col">
+                        <input class="form-control" type="date" id="inputDate"/>
+                    </div>
+                    <input class="btn btn-primary" type="button" value="add"
+                           onclick="addTodo()"/>
+
+                </div>
+            </form>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+        </div>
+    </main>
 </body>
-<form>
-    <label>Title</label>
-    <input type="text" id="inputTitle"/>
-    <label>Description</label>
-    <input type="text" id="inputDescription"/>
-    <label>Place</label>
-    <input type="text" id="inputPlace"/>
-    <label>Due date</label>
-    <input type="date" id="inputDate"/>
-    <input type="button" value="add"
-           onclick="addTodo()"/>
-</form>
+
 </html>
