Jeszcze spinner dodałem, żeby było ładowanie eleganckie

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="container bg-secondary">
             <h1 class="d-flex justify-content-center text-white">My ToDo List</h1>
             <div id="todoListView">
+                <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
             </div>
 
             <form>
